[gd_scene load_steps=2 format=3 uid="uid://brgpa340xc1dn"]

[ext_resource type="Script" path="res://main_window/settings_overlay/settings_overlay.gd" id="1_ippme"]

[node name="SettingsOverlay" type="CanvasLayer"]
script = ExtResource("1_ippme")

[node name="DimmedBackground" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="SettingsPanel" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="SettingsPanel"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="Heading" type="Label" parent="SettingsPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Settings"
horizontal_alignment = 1

[node name="VBox1" type="VBoxContainer" parent="SettingsPanel/VBox"]
layout_mode = 2

[node name="StorePath" type="HBoxContainer" parent="SettingsPanel/VBox/VBox1"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="SettingsPanel/VBox/VBox1/StorePath"]
layout_mode = 2
text = "Store Path"
vertical_alignment = 1

[node name="Path" type="LineEdit" parent="SettingsPanel/VBox/VBox1/StorePath"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
text = "/home/ben/habituary/"
alignment = 1
editable = false

[node name="Explanation" type="Label" parent="SettingsPanel/VBox/VBox1"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "This is the path under which Habituary will store all your to-dos. It is highly recommended that you keep regular backups of this directory to prevent data loss in case of errors or bugs."
autowrap_mode = 3

[node name="VBox2" type="VBoxContainer" parent="SettingsPanel/VBox"]
layout_mode = 2

[node name="TodayPosition" type="HBoxContainer" parent="SettingsPanel/VBox/VBox2"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="SettingsPanel/VBox/VBox2/TodayPosition"]
layout_mode = 2
size_flags_horizontal = 3
text = "Current Day Position"
vertical_alignment = 1

[node name="Options" type="OptionButton" parent="SettingsPanel/VBox/VBox2/TodayPosition"]
layout_mode = 2

[node name="Explanation" type="Label" parent="SettingsPanel/VBox/VBox2"]
layout_mode = 2
theme_override_font_sizes/font_size = 12

[node name="Close" type="Button" parent="SettingsPanel/VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Close"

[connection signal="gui_input" from="DimmedBackground" to="." method="_on_dimmed_background_gui_input"]
[connection signal="item_selected" from="SettingsPanel/VBox/VBox2/TodayPosition/Options" to="." method="_on_options_item_selected"]
[connection signal="pressed" from="SettingsPanel/VBox/Close" to="." method="_on_close_pressed"]
